<!--
  ~ Copyright (c) 2019.
  ~ This file is part of Metronome.
  ~
  ~      Metronome is free software: you can redistribute it and/or modify
  ~      it under the terms of the GNU General Public License as published by
  ~      the Free Software Foundation, either version 3 of the License, or
  ~      (at your option) any later version.
  ~
  ~      Metronome is distributed in the hope that it will be useful,
  ~      but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~      GNU General Public License for more details.
  ~
  ~      You should have received a copy of the GNU General Public License
  ~      along with Metronome.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="MissingTranslation">
	<string name="app_name">Metronome</string>
	<string name="save">Save</string>
	<string name="restore">Restore</string>
	<string name="round_up">Up</string>
	<string name="round_down">Down</string>
	<string name="round_up_toast">Round up the BPM value.</string>
	<string name="round_down_toast">Round down the BPM value.</string>
	<string name="reset">Reset to defaults</string>
	<string name="save_fail_toast">Didn\'t save!</string>
	<string name="save_success_toast">Saved Successfully!</string>
	<string name="restore_read_fail_toast">Failed to read, clear app data or try to save again!</string>
	<string name="autosave_name" translatable="false">AUTOSAVE</string>
	<string name="wave_type">Wave Type:</string>
	<string name="square">Square</string>
	<string name="sine">Sine</string>
	<string name="sawtooth">Sawtooth</string>
	<string name="PWM" translatable="false">PWM</string>
	<string name="cancel">Cancel</string>
	<string name="radioactive" translatable="false">https://radioactive.waelk.tech</string>
	<string name="website">Developer website: </string>
	<string name="about">About</string>
	<string name="about_note">Note that the taps are in subdivisions of 4/4!</string>
	<string name="beats_number">Beats:</string>
	<string name="bpm" translatable="false">BPM:</string>
	<string name="copyright" translatable="false">Copyright 2019, Wael Karram.</string>
	<string name="delete">Delete</string>
	<string name="deleted">Deleted</string>
	<string name="email" translatable="false">waelkarram@gmail.com</string>
	<string name="keep_on">Keep The Screen On</string>
	<string name="license" translatable="false">Metronome is free software: you can redistribute it and/or modify \t\t~ it under the terms of the GNU General Public License as published by \t\t~ the Free Software Foundation, either version 3 of the License, or \t\t~ (at your option) any later version. \t\t~ \t\t~ Metronome is distributed in the hope that it will be useful, \t\t~ but WITHOUT ANY WARRANTY; without even the implied warranty of \t\t~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the \t\t~ GNU General Public License for more details. \t\t~ \t\t~ You should have received a copy of the GNU General Public License \t\t~ along with Metronome. If not, see &lt;http://www.gnu.org/licenses/>.</string>
	<string name="minus_one" translatable="false">-1</string>
	<string name="minus_ten" translatable="false">-10</string>
	<string name="no_saved_presets_toast">You haven\'t saved any presets!</string>
	<string name="nothing_delete">Nothing to delete!</string>
	<string name="ok">OK</string>
	<string name="plus_one" translatable="false">+1</string>
	<string name="plus_ten" translatable="false">+10</string>
	<string name="save_name">Save:</string>
	<string name="save_preset">Save Preset</string>
	<string name="start">Start/Stop</string>
	<string name="stop_tap">Finish Taps</string>
	<string name="tap">TAP</string>
	<string name="tick">tick</string>
	<string name="tock">tock</string>
	<string name="tone">Tone</string>
	<string name="values_set">Set sane values!</string>
	<string name="action_settings">Settings</string>
</resources>
