<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019.
  ~ This file is part of Metronome.
  ~
  ~      Metronome is free software: you can redistribute it and/or modify
  ~      it under the terms of the GNU General Public License as published by
  ~      the Free Software Foundation, either version 3 of the License, or
  ~      (at your option) any later version.
  ~
  ~      Metronome is distributed in the hope that it will be useful,
  ~      but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~      GNU General Public License for more details.
  ~
  ~      You should have received a copy of the GNU General Public License
  ~      along with Metronome.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:background="@color/colorPrimaryDark"
			  android:orientation="vertical"
	          android:padding="10dp">

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="5dp"
		android:layout_marginStart="5dp"
		android:text="@string/save_name"
		android:textAppearance="?android:attr/textAppearanceLarge"/>
	<EditText
		android:id="@+id/editTextDialog"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
		android:textColor="@color/colorAccent"/>
	<LinearLayout android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:weightSum="2">
		<Button
			android:id="@+id/buttonCancel"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/cancel"/>
		<Button
			android:id="@+id/buttonOK"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/ok"/>
	</LinearLayout>
</LinearLayout>